[package]
name = "midi-m8"
description = "Turn Dirtywave M8 songs into Midi tracks"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/AlexCharlton/midi-m8"
license = "MIT"
keywords = ["music"]

[dependencies]
byteorder = "1.4.3"
clap = { version = "4.1.6", features = ["derive"] }
m8-files = "0.1.3"
midi-msg = "0.4.0"
