[package]
name = "midi-m8"
description = "Turn Dirtywave M8 songs into Midi tracks"
version = "1.3.0"
edition = "2021"
repository = "https://github.com/AlexCharlton/midi-m8"
license = "MIT"
keywords = ["music"]

[dependencies]
clap = { version = "4.1", features = ["derive"] }
human-panic = { version = "1.1", features = ["color"] }
m8-files = { workspace = true }
midi-m8-core = { workspace = true }

[workspace]
members = ["core", "plugin", "plugin/xtask"]

[workspace.dependencies]
midi-msg = "0.4"
m8-files = "0.2"
midi-m8-core = { version = "1.3", path = "./core" }
