[package]
name = "midi-m8-plugin"
version = "1.1.0"
edition = "2021"
repository = "https://github.com/AlexCharlton/midi-m8"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# lemna = { path = "../../lemna/" }
# lemna-nih-plug = { path = "../../lemna/nih-plug", features = ["standalone"] }
lemna = { git = "https://github.com/AlexCharlton/lemna.git" }
lemna-nih-plug = { git = "https://github.com/AlexCharlton/lemna.git" , features = ["standalone"] }
log = { version = "0.4", features = ["max_level_warn", "release_max_level_error"] }
m8-files = { workspace = true }
midi-msg = { workspace = true }
midi-m8-core = { workspace = true }