[package]
name = "midi-m8-plugin"
description = "Turn Dirtywave M8 songs into Midi tracks"
version = "1.3.0"
edition = "2021"
repository = "https://github.com/AlexCharlton/midi-m8"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# lemna = { path = "../../lemna/" }
# lemna-nih-plug = { path = "../../lemna/nih-plug", features = ["standalone"] }
lemna = { git = "https://github.com/AlexCharlton/lemna.git" }
lemna-nih-plug = { git = "https://github.com/AlexCharlton/lemna.git" , features = ["standalone"] }
log = { version = "0.4", features = ["max_level_warn", "release_max_level_error"] }
m8-files = { workspace = true }
midi-msg = { workspace = true }
midi-m8-core = { workspace = true }
open = "4.1"
temp-file = "0.1.7"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.bundle]
identifier = "com.github.AlexCharlton.midi-m8"
icon = [
  "256.ico",
  "include/icon_512x512@2x.png"
]